--- a/Task_2_3_1/src/main/resources/nsu/kochanov/task_2_3_1/sample.fxml
+++ b/Task_2_3_1/src/main/resources/nsu/kochanov/task_2_3_1/sample.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ComboBox?>
 
-<VBox spacing="0" alignment="CENTER" xmlns="http://javafx.com/javafx"
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="nsu.kochanov.task_2_3_1.GameController"
       stylesheets="@styles.css">
@@ -19,6 +19,7 @@
             <Button text="Старт" onAction="#handleStart" styleClass="game-button"/>
             <Button text="Стоп" onAction="#handleStop" styleClass="game-button"/>
             <Button text="Рестарт" onAction="#handleRestart" styleClass="game-button"/>
+            <ComboBox fx:id="musicComboBox" promptText="Выберите музыку" styleClass="game-combo"/>
         </HBox>
 
         <HBox spacing="30" alignment="CENTER">
@@ -28,7 +29,7 @@
     </VBox>
 
     <!-- Разделительная линия -->
-    <Line startX="0" startY="0" endX="800" endY="0" stroke="black" strokeWidth="2"/>
+    <Line endX="800" stroke="black" strokeWidth="2"/>
 
     <!-- Игровое поле -->
     <Canvas fx:id="gameCanvas" width="800" height="800"/>
